--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Speaker/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Speaker/Index.cshtml
@@ -34,6 +34,9 @@
                                     </div>
                                     <input id="newName" type="text" class="form-control" placeholder="Nhập tên diễn giả">
                                 </div>
+                                <div class="div-title-error empty col-lg-offset-3 col-lg-9 div-name-error" id="speaker-name-error">
+                                    <p class="empty">Vui lòng nhập tên diễn giả</p>
+                                </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-sm-3 form-control-label">Miêu Tả:</label>
