--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/QA.css
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/QA.css
@@ -234,3 +234,18 @@
 .post-question-modal-header h4 {
     color:white;
 }
+
+.logo-name {
+    width:40px;
+    height:40px;
+    border-radius:40px;
+    background-color:blue;
+    color:white;
+    text-align:center;
+    line-height:40px;
+}
+
+.logo-name {
+    font-weight:bold;
+    font-size:20px !important;
+}
